--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -13,6 +13,11 @@ spring:
   liquibase.change-log:
     classpath:liquibase-changeLog.xml
 
+  data:
+    web:
+      pageable:
+        default-page-size: 25
+        max-page-size: 100
 server:
   error:
     include-message: always
